[gd_scene load_steps=56 format=2]

[ext_resource path="res://src/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://Voxel Models/Bed.obj" type="ArrayMesh" id=3]
[ext_resource path="res://src/Interactable.gd" type="Script" id=4]
[ext_resource path="res://Voxel Models/Desk.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Voxel Models/Carpet.obj" type="ArrayMesh" id=6]
[ext_resource path="res://src/Player2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Voxel Models/window.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Voxel Models/Apple.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Voxel Models/Picture.obj" type="ArrayMesh" id=10]
[ext_resource path="res://Voxel Models/Doll.obj" type="ArrayMesh" id=11]
[ext_resource path="res://Voxel Models/Shoe.obj" type="ArrayMesh" id=12]
[ext_resource path="res://Voxel Models/Key.obj" type="ArrayMesh" id=13]
[ext_resource path="res://Voxel Models/Book.obj" type="ArrayMesh" id=14]
[ext_resource path="res://src/Key.gd" type="Script" id=15]
[ext_resource path="res://src/Door.gd" type="Script" id=16]
[ext_resource path="res://src/Book.gd" type="Script" id=17]
[ext_resource path="res://src/Shoe.gd" type="Script" id=18]
[ext_resource path="res://src/Picture.gd" type="Script" id=19]
[ext_resource path="res://Voxel Models/Door.obj" type="ArrayMesh" id=20]
[ext_resource path="res://Voxel Models/Desk(no_missing_book).obj" type="ArrayMesh" id=21]
[ext_resource path="res://src/DupDesk.gd" type="Script" id=22]
[ext_resource path="res://src/Desk.gd" type="Script" id=23]
[ext_resource path="res://Voxel Models/Knife.obj" type="ArrayMesh" id=24]
[ext_resource path="res://src/Knife.gd" type="Script" id=25]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 5.5, 1, 3 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 3.75, 1.25, 2 )

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( -9, 0, 5, 9, 0, 5, -9, 0, -5, 9, 0, -5, 0, 0.2, 0 )

[sub_resource type="BoxShape" id=10]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.654902, 0.262745, 0, 1 )

[sub_resource type="CubeMesh" id=11]
material = SubResource( 7 )
size = Vector3( 16, 10, 1 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 8, 5, 0.5 )

[sub_resource type="CubeMesh" id=13]
material = SubResource( 7 )
size = Vector3( 4, 1, 3 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 2, 0.5, 1.5 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 7 )
size = Vector3( 30, 10, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 15, 5, 0.5 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 0.5, 30 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.654902, 0.262745, 0, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 6 )
size = Vector3( 60, 1, 60 )

[sub_resource type="CubeMesh" id=22]
material = SubResource( 7 )
size = Vector3( 4.25, 2, 1 )

[sub_resource type="BoxShape" id=23]
extents = Vector3( 2.125, 1, 0.5 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 0.3, 0.3, 0.3 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 1, 0.75, 0.15 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 0.3, 0.6, 0.3 )

[sub_resource type="BoxShape" id=18]
extents = Vector3( 0.75, 0.35, 0.3 )

[sub_resource type="BoxShape" id=19]
extents = Vector3( 3.5, 1.5, 2 )

[sub_resource type="BoxShape" id=20]
extents = Vector3( 0.5, 0.25, 0.1 )

[sub_resource type="BoxShape" id=21]
extents = Vector3( 0.5, 0.15, 0.35 )

[sub_resource type="BoxShape" id=25]
extents = Vector3( 0.5, 4.5, 2.75 )

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "door_open"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -120, 0 ) ]
}

[sub_resource type="BoxShape" id=29]

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "to_win_screen"
} ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 598.0
margin_bottom = 700.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer"]
size = Vector2( 598, 700 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Player" parent="HBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 1 )]
transform = Transform( 1.19209e-07, 0, -1, 0, 1, 0, 1, 0, 1.19209e-07, -5, -1, 0 )

[node name="ViewportContainer2" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 602.0
margin_right = 1200.0
margin_bottom = 700.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer2"]
size = Vector2( 598, 700 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Player2" parent="HBoxContainer/ViewportContainer2/Viewport" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5, -1, 0 )
current_player = false

[node name="PlayerSwitchCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Bed" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 6, 0 )
collision_layer = 3
script = ExtResource( 4 )
interact_text = "It doesn't look as comfy as you remember. Maybe it's because you're dead now."

[node name="MeshInstance" type="MeshInstance" parent="Bed"]
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Bed"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0950146, 2.12385, 0 )
shape = SubResource( 5 )

[node name="Bed2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.70141, -4.52671, -34.1433 )
collision_layer = 3
script = ExtResource( 4 )
interact_text = "It doesn't look as comfy as you remember. Maybe it's because you're dead now."

[node name="MeshInstance" type="MeshInstance" parent="Bed2"]
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Bed2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0950146, 2.12385, 0 )
shape = SubResource( 5 )

[node name="Desk" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 27 )
collision_layer = 3
script = ExtResource( 23 )

[node name="MeshInstance" type="MeshInstance" parent="Desk"]
mesh = ExtResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Desk"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
shape = SubResource( 8 )

[node name="Carpet" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -10, 5.94739, 0 )
collision_layer = 3
script = ExtResource( 4 )
interact_text = "It's the carpet. It has stains of blood on it, probably your own."

[node name="MeshInstance" type="MeshInstance" parent="Carpet"]
mesh = ExtResource( 6 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Carpet"]
shape = SubResource( 9 )

[node name="Window" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.1525, -2.51909, 30 )
collision_layer = 3
script = ExtResource( 4 )
interact_text = "The window's curtain is raised halfway. It's pitch black outside, but you aren't sure if that's because it's supposed to be night, or if it's always dark in limbo."

[node name="MeshInstance" type="MeshInstance" parent="Window"]
mesh = ExtResource( 8 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Window"]
transform = Transform( 2, 0, 0, 0, 3, 0, 0, 0, 0.2, 0, 3, 0 )
shape = SubResource( 10 )

[node name="WallsFloors" type="Node" parent="."]

[node name="Wall5" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.0765, 0.00282526, 30 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall5"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall5"]
shape = SubResource( 12 )

[node name="Wall6" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 19.4324, 0.00282526, 21.4429 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall6"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall6"]
shape = SubResource( 12 )

[node name="Wall23" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -15.5676, 0.00282526, -30.5571 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall23"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall23"]
shape = SubResource( 12 )

[node name="Wall25" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.56759, 0.00282526, -30.5571 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall25"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall25"]
shape = SubResource( 12 )

[node name="Wall16" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 30.4324, 0.00282526, 10.4429 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall16"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0691848, 0 )
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall16"]
shape = SubResource( 12 )

[node name="Wall14" type="StaticBody" parent="WallsFloors"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 27.4324, 0.00282526, 18.4429 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall14"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall14"]
shape = SubResource( 12 )

[node name="Wall17" type="StaticBody" parent="WallsFloors"]
transform = Transform( -1, 0, -8.74228e-08, 8.74228e-08, -4.37114e-08, -1, -3.82137e-15, -1, 4.37114e-08, 27.4324, 5.51103, 19.4429 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall17"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall17"]
shape = SubResource( 12 )

[node name="Wall15" type="StaticBody" parent="WallsFloors"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 27.4324, 0.00282526, 2.44287 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall15"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall15"]
shape = SubResource( 12 )

[node name="Wall13" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 19.4324, 10.0028, 21.4429 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall13"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall13"]
shape = SubResource( 12 )

[node name="Wall19" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -29.9934, 10.0028, 21.4429 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall19"]
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall19"]
shape = SubResource( 12 )

[node name="SmallFloor" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27.4843, 5.45277, 27.9891 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/SmallFloor"]
mesh = SubResource( 13 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/SmallFloor"]
shape = SubResource( 14 )

[node name="Wall" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -22 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall"]
shape = SubResource( 4 )

[node name="Wall24" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.11586, 0, -38 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall24"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall24"]
shape = SubResource( 4 )

[node name="Wall10" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 11, -15 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall10"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall10"]
shape = SubResource( 4 )

[node name="Wall12" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 10, 30 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall12"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall12"]
shape = SubResource( 4 )

[node name="Wall21" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 10, 30 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall21"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall21"]
shape = SubResource( 4 )

[node name="Wall20" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 10, 30 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall20"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall20"]
shape = SubResource( 4 )

[node name="Wall11" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 11, -15 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall11"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall11"]
shape = SubResource( 4 )

[node name="Wall22" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 6, -22 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall22"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall22"]
shape = SubResource( 4 )

[node name="Wall8" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, -22 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall8"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall8"]
shape = SubResource( 4 )

[node name="Wall2" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 30 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall2"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall2"]
shape = SubResource( 4 )

[node name="Wall3" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 0, -6.67497 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall3"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall3"]
shape = SubResource( 4 )

[node name="Wall18" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 0, 15.325 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall18"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall18"]
shape = SubResource( 4 )

[node name="Wall7" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 11, 0 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall7"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall7"]
shape = SubResource( 4 )

[node name="Wall4" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 19.4498, 0, -7 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall4"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall4"]
shape = SubResource( 4 )

[node name="Wall9" type="StaticBody" parent="WallsFloors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 19.3044, 11, 0 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Wall9"]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Wall9"]
shape = SubResource( 4 )

[node name="Floor" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Floor"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Floor"]
mesh = SubResource( 2 )
skeleton = NodePath("../../..")
material/0 = null

[node name="Floor4" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, -60 )

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Floor4"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Floor4"]
mesh = SubResource( 2 )
skeleton = NodePath("../../..")
material/0 = null

[node name="Floor2" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.51947, -15 )

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Floor2"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Floor2"]
mesh = SubResource( 2 )
skeleton = NodePath("../../..")
material/0 = null

[node name="Floor3" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.5195, 1 )

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/Floor3"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/Floor3"]
mesh = SubResource( 2 )
skeleton = NodePath("../../..")
material/0 = null

[node name="SmallWall" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 4.50234, 30 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/SmallWall"]
mesh = SubResource( 22 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/SmallWall"]
shape = SubResource( 23 )

[node name="SmallWall2" type="StaticBody" parent="WallsFloors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, -3.51173, 30 )

[node name="MeshInstance" type="MeshInstance" parent="WallsFloors/SmallWall2"]
mesh = SubResource( 22 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="WallsFloors/SmallWall2"]
shape = SubResource( 23 )

[node name="Apple" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11, -4.44007, -34 )
collision_layer = 3
script = ExtResource( 4 )
interact_text = "It's an apple, looks like it's been half eaten, but it's still fresh. Perhaps time in limbo works a bit differently than on Earth."

[node name="MeshInstance" type="MeshInstance" parent="Apple"]
mesh = ExtResource( 9 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Apple"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.25, -0.05 )
shape = SubResource( 15 )

[node name="Picture" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.28057, 0, -27 )
collision_layer = 3
script = ExtResource( 19 )

[node name="MeshInstance" type="MeshInstance" parent="Picture"]
mesh = ExtResource( 10 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Picture"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.75, -0.05 )
shape = SubResource( 16 )

[node name="Doll" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -11, 6.45899, -2 )
collision_layer = 3
script = ExtResource( 4 )
interact_text = "It's a small doll you kept around for whatever reason. It looks like some blood was splattered on it. Does that mean..?"

[node name="MeshInstance" type="MeshInstance" parent="Doll"]
mesh = ExtResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Doll"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )
shape = SubResource( 17 )

[node name="Shoe" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 6.03155, 0 )
collision_layer = 3
script = ExtResource( 18 )

[node name="MeshInstance" type="MeshInstance" parent="Shoe"]
mesh = ExtResource( 12 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Shoe"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0 )
shape = SubResource( 18 )

[node name="DupDesk" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 16.8848, 6, 0 )
collision_layer = 3
script = ExtResource( 22 )

[node name="MeshInstance" type="MeshInstance" parent="DupDesk"]
mesh = ExtResource( 21 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DupDesk"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 19 )

[node name="Key" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28, 5.96158, 29.4051 )
collision_layer = 3
script = ExtResource( 15 )

[node name="MeshInstance" type="MeshInstance" parent="Key"]
mesh = ExtResource( 13 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Key"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.25, -0.05 )
shape = SubResource( 20 )

[node name="KeyDelete" type="Timer" parent="Key"]
wait_time = 0.2
one_shot = true

[node name="Book" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28, -4.43048, 15 )
collision_layer = 3
script = ExtResource( 17 )

[node name="MeshInstance" type="MeshInstance" parent="Book"]
mesh = ExtResource( 14 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Book"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.15, -0.05 )
shape = SubResource( 21 )

[node name="BookDelete" type="Timer" parent="Book"]
wait_time = 0.2

[node name="Door" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.4356, 0.298045, 13.4282 )
collision_layer = 3
script = ExtResource( 16 )

[node name="MeshInstance" type="MeshInstance" parent="Door"]
transform = Transform( 1.47027e-07, 0, -1, 0, 1, 0, 1, 0, 1.47027e-07, 0, -5.02139, -2.73893 )
mesh = ExtResource( 20 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.75 )
shape = SubResource( 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door"]
anims/RESET = SubResource( 27 )
anims/door_open = SubResource( 28 )

[node name="Knife" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -1, -2.58518, 25.2458 )
visible = false
collision_layer = 3
script = ExtResource( 25 )

[node name="MeshInstance" type="MeshInstance" parent="Knife"]
mesh = ExtResource( 24 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Knife"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 29 )
disabled = true

[node name="KnifeDelete" type="Timer" parent="Knife"]

[node name="WinTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ScreenBlocker" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenBlocker"]
anims/RESET = SubResource( 30 )
anims/fade_in = SubResource( 31 )
anims/fade_out = SubResource( 32 )

[connection signal="timeout" from="PlayerSwitchCooldown" to="." method="_on_PlayerSwitchCooldown_timeout"]
[connection signal="timeout" from="Key/KeyDelete" to="Key" method="_on_KeyDelete_timeout"]
[connection signal="timeout" from="Book/BookDelete" to="Book" method="_on_BookDelete_timeout"]
[connection signal="timeout" from="Knife/KnifeDelete" to="Knife" method="_on_KnifeDelete_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
